@@ -71,6 +71,7 @@ Additions:
     * Edje textblock: Added support for size_range.
 	* Ecore_x: Add atom related with indicator type. 
     * Ecore_x: Add manual render code before deiconify
+    * Eeze: Add a dummy libmount replacement for when libmount is not there.
 
 Deprecations:
     * ecore_x:
